--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Daggerheart Solo Play Utilities</title>
   </head>
   <body>
-    <script src="script.js"></script>
+    <main>
+      <p id="test-para"></p>
+    </main>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
