--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Daggerheart Solo Play Utilities</title>
   </head>
   <body>
+    <header>
+      <h1>Daggerheart Solo Play and General Utilities</h1>
+    </header>
     <main>
       <div class="adv-selector">
         <p class="selector-tier-title">
